style.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

*, *::before, *::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    list-style: none;
    text-decoration: none;
}

:root {
    font-size: 62.5%;
    scroll-behavior: smooth;
    --titlefont: "Figtree", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    --bodyfont: "Quicksand", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

header {
    font-family: var(--titlefont);
    font-size: 1.5rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    vertical-align: baseline;
    padding: 0 5rem;
    padding-top: 5rem;
    position: relative;
}

body {
    font-family: var(--bodyfont);
    background-color: #211e21;
    color: #fff;
    text-transform: uppercase;
}

img {
    pointer-events: none;
}

/* HOMEPAGE ------------------------------------------------------------------------------- */

/* Hero ------------------------------------------------------------ */

.hero {
    height: 100vh;
    flex: 1;
    display: flex;
    flex-direction: column;
    position: relative;
    justify-content: center;
}

.hero-ttl-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: calc(100vh - 80px);
}

.hero-ttl {
    font-family: var(--titlefont);
    font-size: 9rem;
    line-height: 7rem;
    flex: 0 0 auto;
    color: #9caf89;
    text-align: center;
    justify-content: center;
    text-wrap: nowrap;
}

/* Navigation Bar -------------------------------------------------- */

nav {
    font-family: var(--titlefont);
    font-weight: 600;
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}

.navbar {
    display: flex;
    justify-content: center;
    flex-grow: 1;
    position: relative;
}

.navbar li a {
    transition: all 0.2s ease 0s;
    border-radius: 5px;
    color: #fff;
}

.nav-link {
    padding: 2rem 0;
    margin: 0 2rem;
    display: inline-block;
    position: relative;
}

/* Logo */

.nav-logo {
    flex: 0 0 auto;
}

.nav-logo img {
    display: block;
    width: 3vw;
    max-width: 100%;
    height: auto;
}

.nav-logo a {
    width: 0;
    height: 0;
}

.cta-btn {
    display: inline-block;
    text-align: center;
    line-height: 2rem;
    padding: 1rem 3rem;
    background-color: transparent;
    color: #fff;
    border: 0.3rem solid rgba(156, 175, 137, 0.8);
    border-radius: 4rem;
    font-family: var(--titlefont);
    white-space: nowrap;
    font-weight: 600;
    text-transform: uppercase;
    font-size: 1.5rem;
    margin-left: 10rem;
}

/* Navigation Bar Animations --------------------------------------- */

.nav-link:hover {
    color: rgba(255, 255, 255, 0.7)
}

.nav-link.active::before {
    content: "";
    position: absolute;
    display: block;
    width: 100%;
    height: 0.3rem;
    bottom: 1rem;
    left: 0;
    background-color: #9caf89;
    transform: scaleX(1);
    transition: transform 0.3s ease;
}

.nav-link:hover:not(.active)::before {
    transform: scaleX(1);
}

.nav-link::before {
    content: "";
    position: absolute;
    display: block;
    width: 100%;
    height: 0.3rem;
    bottom: 1rem;
    left: 0;
    background-color: #9caf89;
    transform: scaleX(0);
    transition: transform 0.3s ease;
}

.nav-link:hover::before {
    transform: scaleX(1);
}

.cta-btn:hover {
    transition: all 0.2s ease 0s;
    background-color: #9caf89;
    color: #211e21;
    cursor: pointer;
}

.cta-btn:not(:hover) {
    transition: all 0.2s ease 0s;
}

/* Featured Project ------------------------------------------------ */

.featured-proj {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1.5rem;
    max-width: 80%;
    max-height: 100%;
    margin: 5rem;
    flex-direction: row;
    position: relative;
}

.featured-proj img {
    margin: 2rem 0;
    border-radius: 20px;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.featured-proj-bg {
    max-width: 25%;
    filter: blur(0.3rem);
    opacity: 0.50;
    z-index: 0;
    position: relative;
}

.featured-proj-front {
    max-width: 30%;
    z-index: 2;
    box-shadow: 0 0px 10px 1px #9caf89;
    transform: scale(1.05);
}

/* Blurb ----------------------------------------------------------- */

.featured-proj-wrapper, .blurb-wrapper, .proficiencies-wrapper, .virtues-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    margin: auto;
    text-align: center;
    text-transform: none;
}

.featured-proj-heading, .blurb-heading, .proficiencies-ttl, .virtues-ttl {
    font-family: var(--titlefont);
    font-size: 6rem;
    font-weight: 750;
    color: #211e21;
    text-transform: uppercase;
    background-color: #9caf89;
    padding: 2rem 0;
    width: 100%;
    text-wrap: nowrap;
}

.blurb-content {
    display: flex;
    align-items: center;
    margin: 5rem;
}

.blurb-text {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.professional-portrait {
    border-radius: 250px 250px 0 0;
    margin: 2rem 0 0;
    width: 50rem;
    height: 50rem;
    object-fit: cover;
}

.blurb-desc {
    font-size: 3rem;
    line-height: 2rem; 
    color: #fff;
    text-align: left;
    padding-left: 10rem;
    width: 80rem;
}

.blurb-desc a {
    color: #9caf89;
    font-weight: 600;
}

/* ABOUT PAGE ----------------------------------------------------------------------------- */

/* About Me -------------------------------------------------------- */

.abtme-ttl {
    font-family: var(--titlefont);
    font-size: 5rem;
    color: #9caf89;
    text-align: center;
    margin-top: 5rem;
}

.abtme-subttl {
    font-size: 2rem;
    color: #9caf89;
    text-align: center;
    margin-bottom: 2rem;
}

.abtme-desc-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 800px;
    margin: auto;
    text-align: center;
    gap: 1rem;
}

.professional-portrait {
    border-radius: 250px 250px 0 0;
    margin: 5rem;
    width: 50rem;
    height: 50rem;
    object-fit: cover;
}

.abtme-desc {
    font-family: var(--bodyfont);
    font-size: 1.6rem;
    line-height: 2rem;
    margin-bottom: 1.5rem;
    max-width: 600px;
    text-transform: none;
}

/* Proficiencies --------------------------------------------------- */

.skill-bar {
    background-color: #ffffff;
    border-radius: 100px;
    overflow: hidden;
    width: 100%;
    height: 24px;
}

.percentage {
    height: 100%;
    font-size: 2rem;
    font-weight: bold;
    align-items: center;
    justify-content: center;
    display: flex;
}

.proficiencies-content {
    margin: 5rem;
    border-spacing: 1rem 1rem;
    border-collapse: separate;
}

.html {
    width: 65%; background-color: #e44d26;
}
.css {
    width: 55%; background-color: #264de4;
}
.ps {
    width: 85%; background-color: #31a8ff;
}
.ai {
    width: 50%; background-color: #ff9a00;
}
.pr {
    width: 45%; background-color: #9999ff;
}


/* Virtues --------------------------------------------------------- */

.virtues-wrapper ol {
    list-style: none;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 40px;
    counter-reset: list-counter;
    margin: 5rem;
    align-items: flex-start;
}

.virtues {
    font-family: var(--titlefont);
    font-size: 2rem;
    color: #fff;
    margin: 0 0 1rem;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.virtues-desc {
    font-family: var(--bodyfont);
    font-size: 1.6rem;
    color: #fff;
    line-height: 2rem;
    margin-top: 10px;
    text-transform: none;
}

.virtues::before {
    content: counter(list-counter, decimal-leading-zero);
    counter-increment: list-counter;
    font-size: 3rem;
    font-family: var(--titlefont);
    color: #9caf89;
    display: block;
    margin-bottom: 10px;
}

.virtues-desc strong {
    text-decoration: underline;
}

div[class^='v0'], div[class*='v0'] { 
    text-align: left;
    max-width: 60rem;
}

/* General Footer Styles ------------------------------------------- */

#footer {
    font-family: var(--titlefont);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    height: 100vh;
    padding: 4rem 0;
    text-transform: uppercase;
}

/* Contact Form ---------------------------------------------------- */

label, textarea { 
    width: 100%;
    max-height: 250px; 
    min-height: 100px;
    resize: none;
}

.contact-form-wrapper {
    background-color: rgba(156, 175, 137, 0.9);
    border-radius: 25px;
    padding: 3rem 3rem;
    max-width: 800px;
    width: 100%;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    margin-bottom: auto;
    margin-top: auto;
}

.contact-form-heading {
    font-size: 4.8rem;
    color: #211e21;
    text-align: center;
    font-weight: 750;
    text-wrap: nowrap;
}

.contact-form-subheading {
    font-family: var(--bodyfont);
    font-size: 2.5rem;
    color: #211e21;
    text-align: center;
    font-weight: 500;
    margin-bottom: 2rem;
    text-wrap: nowrap;
}

.contact-form label {
    text-align: left;
    font-size: 1.5rem;
    font-weight: 500;
    color: #211e21;
    margin-bottom: 0.5rem;
}

.contact-form input, .contact-form textarea {
    font-family: var(--titlefont);
    width: 100%;
    padding: 1.4rem;
    margin-bottom: 1.6rem;
    border: 2px solid #788869;
    border-radius: 6px;
    background-color: #fff;
    font-size: 1.5rem;
    color: #333;
    transition: border-color 0.3s ease;
}

.contact-form input:focus, .contact-form textarea:focus {
    border-color: #211e21;
    outline: none;
}

.contact-form input[type="submit"] {
    font-family: var(--bodyfont);
    text-transform: uppercase;
    background-color: #211e21;
    border: none;
    cursor: pointer;
    color: #fff;
    font-size: 1.5rem;
    padding: 1.4rem;
    border-radius: 6px;
    width: 100%;
    transition: background-color 0.3s ease;
    font-weight: 800;
}

.contact-form input[type="submit"]:hover {
    background-color: #141414;
}

.contact-form textarea {
    height: 150px;
}

/* Social Media Icons and Copyright -------------------------------- */

.socials-n-copyright-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.social-icons {
    display: flex;
    gap: 1rem;
    margin-bottom: 1rem;
}

.social-icons a {
    color: #fff;
    font-size: 3rem;
}

.social-icons a:hover {
    transform: scale(1.05);
    transition: all 0.3s ease;
    color: rgba(255, 255, 255, 0.8)
}

.copyright {
    text-align: center;
    color: #fff;
    font-size: 1.2rem;
}

